corrijo tests